--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DESA DIGITAL</title>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/209/209818.png" />
+  <link rel="icon" href="https://i.imgur.com/ixTcqjR.png" />
   <style>
     html, body {
       margin: 0;
@@ -42,4 +42,5 @@
     </iframe>
   </div>
 </body>
+
 </html>
